add application user model

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /JWTDemo/.vs/JWTDemo/config
 /JWTDemo/.vs/JWTDemo/FileContentIndex
 /JWTDemo/.vs/JWTDemo/v17
+/JWTDemo/.vs/JWTDemo/DesignTimeBuild/.dtbcache.v2
