ignore debug folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /JWTDemo/.vs/JWTDemo/FileContentIndex
 /JWTDemo/.vs/JWTDemo/v17
 /JWTDemo/.vs/JWTDemo/DesignTimeBuild/.dtbcache.v2
+/JWTDemo/JWTDemo/obj/JWTDemo.csproj.nuget.dgspec.json
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.assets.cache
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.csproj.AssemblyReference.cache
+/JWTDemo/JWTDemo/obj/project.assets.json
+/JWTDemo/JWTDemo/obj/project.nuget.cache
