add registeration endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,46 @@
 /JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.csproj.AssemblyReference.cache
 /JWTDemo/JWTDemo/obj/project.assets.json
 /JWTDemo/JWTDemo/obj/project.nuget.cache
+/JWTDemo/JWTDemo/bin/Debug/net6.0/appsettings.json
+/JWTDemo/JWTDemo/bin/Debug/net6.0/JWTDemo.deps.json
+/JWTDemo/JWTDemo/bin/Debug/net6.0/JWTDemo.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/JWTDemo.pdb
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.AspNetCore.Authentication.JwtBearer.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.AspNetCore.Identity.EntityFrameworkCore.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.Data.SqlClient.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.EntityFrameworkCore.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.EntityFrameworkCore.Relational.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.Identity.Client.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.IdentityModel.JsonWebTokens.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.IdentityModel.Logging.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.IdentityModel.Protocols.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.IdentityModel.Tokens.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.Win32.SystemEvents.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Configuration.ConfigurationManager.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Drawing.Common.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.IdentityModel.Tokens.Jwt.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Runtime.Caching.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Security.Cryptography.ProtectedData.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Security.Permissions.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/System.Windows.Extensions.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/unix/lib/netcoreapp3.0/System.Drawing.Common.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/unix/lib/netcoreapp3.1/Microsoft.Data.SqlClient.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netcoreapp3.0/Microsoft.Win32.SystemEvents.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netcoreapp3.0/System.Drawing.Common.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netcoreapp3.0/System.Windows.Extensions.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netstandard2.0/System.Runtime.Caching.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.ProtectedData.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win/lib/netcoreapp3.1/Microsoft.Data.SqlClient.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.dll
+/JWTDemo/JWTDemo/obj/Debug/net6.0/ref/JWTDemo.dll
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.csproj.CoreCompileInputs.cache
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.csproj.FileListAbsolute.txt
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.dll
+/JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.pdb
+/JWTDemo/JWTDemo/obj/Debug/net6.0/refint/JWTDemo.dll
