add registeration endpoint

--- a/JWTDemo/JWTDemo/appsettings.json
+++ b/JWTDemo/JWTDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EGY": "Server=.; Database=JWTdb; Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,12 @@
     }
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "Key": "nu5E5kgeRAmlKuBdWFcZ0fbDm59GnbtvF83SABkOPP8=",
+    "Issuer": "JWTSecureAPI",
+    "Audience": "JWTSecureAPIUser",
+    "DurationInDays": 15
+  }
 }
