--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@
 /JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.dll
 /JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.pdb
 /JWTDemo/JWTDemo/obj/Debug/net6.0/refint/JWTDemo.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Humanizer.dll
+/JWTDemo/JWTDemo/bin/Debug/net6.0/Microsoft.EntityFrameworkCore.Design.dll
+/JWTDemo/JWTDemo/obj/JWTDemo.csproj.nuget.g.props
