ignore vs files

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@
 /JWTDemo/JWTDemo/obj/JWTDemo.csproj.nuget.g.props
 /JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.GeneratedMSBuildEditorConfig.editorconfig
 /JWTDemo/JWTDemo/obj/Debug/net6.0/JWTDemo.genruntimeconfig.cache
+/JWTDemo/.vs/ProjectEvaluation/jwtdemo.metadata.v7.bin
+/JWTDemo/.vs/ProjectEvaluation/jwtdemo.projects.v7.bin
