refresh token endpoint

--- a/JWTDemo/JWTDemo/appsettings.json
+++ b/JWTDemo/JWTDemo/appsettings.json
@@ -16,5 +16,7 @@
     "Issuer": "JWTSecureAPI",
     "Audience": "JWTSecureAPIUser",
     "DurationInDays": 15
-  }
+  },
+
+  "RefreshTokenDurationInDays": 1
 }
